Inheritance finished. Exceptions explained

--- a/004 Object Oriented Programming/006 Inheritance.ipynb
+++ b/004 Object Oriented Programming/006 Inheritance.ipynb
@@ -1149,123 +1149,183 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Key Takeaways\n",
+    "## Summary\n",
     "\n",
-    "1. The `__str__()` method converts an object's contents into a readable string. You can redefine it for a more elegant representation of your object. For example:\n",
+    "1. The `__str__()` method converts an object's contents into a readable string. You can redefine it for a more elegant representation of your object. For example:    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Mouse:\n",
+    "    def __init__(self, name):\n",
+    "        self.my_name = name\n",
     "\n",
-    "    ```python\n",
-    "    class Mouse:\n",
-    "        def __init__(self, name):\n",
-    "            self.my_name = name\n",
+    "    def __str__(self):\n",
+    "        return self.my_name\n",
     "\n",
-    "        def __str__(self):\n",
-    "            return self.my_name\n",
-    "\n",
-    "    the_mouse = Mouse('mickey')\n",
-    "    print(the_mouse)  # Prints \"mickey\".\n",
-    "    ```\n",
-    "\n",
-    "2. The `issubclass(Class_1, Class_2)` function checks if `Class_1` is a subclass of `Class_2`. For example:\n",
-    "\n",
-    "    ```python\n",
-    "    class Mouse:\n",
-    "        pass\n",
-    "\n",
-    "    class LabMouse(Mouse):\n",
-    "        pass\n",
-    "\n",
-    "    print(issubclass(Mouse, LabMouse), issubclass(LabMouse, Mouse))  # Prints \"False True\".\n",
-    "    ```\n",
-    "\n",
-    "3. The `isinstance(Object, Class)` function checks if an object is an instance of a specified class. For example:\n",
-    "\n",
-    "    ```python\n",
-    "    class Mouse:\n",
-    "        pass\n",
-    "\n",
-    "    class LabMouse(Mouse):\n",
-    "        pass\n",
-    "\n",
-    "    mickey = Mouse()\n",
-    "    print(isinstance(mickey, Mouse), isinstance(mickey, LabMouse))  # Prints \"True False\".\n",
-    "    ```\n",
-    "\n",
-    "4. The `is` operator checks if two variables reference the same object. For example:\n",
-    "\n",
-    "    ```python\n",
-    "    class Mouse:\n",
-    "        pass\n",
-    "\n",
-    "    mickey = Mouse()\n",
-    "    minnie = Mouse()\n",
-    "    cloned_mickey = mickey\n",
-    "    print(mickey is minnie, mickey is cloned_mickey)  # Prints \"False True\".\n",
-    "    ```\n",
-    "\n",
-    "5. The `super()` function returns a reference to the nearest superclass of the class. For example:\n",
-    "\n",
-    "    ```python\n",
-    "    class Mouse:\n",
-    "        def __str__(self):\n",
-    "            return \"Mouse\"\n",
-    "\n",
-    "    class LabMouse(Mouse):\n",
-    "        def __str__(self):\n",
-    "            return \"Laboratory \" + super().__str__()\n",
-    "\n",
-    "    doctor_mouse = LabMouse()\n",
-    "    print(doctor_mouse)  # Prints \"Laboratory Mouse\".\n",
-    "    ```\n",
-    "\n",
-    "6. Methods, instance variables, and class variables defined in a superclass are automatically inherited by their subclasses. For example:\n",
-    "\n",
-    "    ```python\n",
-    "    class Mouse:\n",
-    "        Population = 0\n",
-    "\n",
-    "        def __init__(self, name):\n",
-    "            Mouse.Population += 1\n",
-    "            self.name = name\n",
-    "\n",
-    "        def __str__(self):\n",
-    "            return \"Hi, my name is \" + self.name\n",
-    "\n",
-    "    class LabMouse(Mouse):\n",
-    "        pass\n",
-    "\n",
-    "    professor_mouse = LabMouse(\"Professor Mouser\")\n",
-    "    print(professor_mouse, Mouse.Population)  # Prints \"Hi, my name is Professor Mouser 1\".\n",
-    "    ```\n",
-    "\n",
-    "7. To find any object/class property, Python looks in the following order:\n",
-    "    - Inside the object itself.\n",
-    "    - In all classes involved in the object's inheritance line from bottom to top.\n",
-    "    - If there is more than one class on a particular inheritance path, Python scans them from left to right.\n",
-    "    - If none of the above find the property, an `AttributeError` exception is raised.\n",
-    "\n",
-    "8. If a subclass defines a method or variable with the same name as in the superclass, the subclass's name overrides the superclass's. For example:\n",
-    "\n",
-    "    ```python\n",
-    "    class Mouse:\n",
-    "        def __init__(self, name):\n",
-    "            self.name = name\n",
-    "\n",
-    "        def __str__(self):\n",
-    "            return \"My name is \" + self.name\n",
-    "\n",
-    "    class AncientMouse(Mouse):\n",
-    "        def __str__(self):\n",
-    "            return \"Meum nomen est \" + self.name\n",
-    "\n",
-    "    mus = AncientMouse(\"Caesar\")\n",
-    "    print(mus)  # Prints \"Meum nomen est Caesar\".\n",
-    "    ```"
+    "the_mouse = Mouse('mickey')\n",
+    "print(the_mouse)  # Prints \"mickey\"."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "2. The `issubclass(Class_1, Class_2)` function checks if `Class_1` is a subclass of `Class_2`. For example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Mouse:\n",
+    "    pass\n",
+    "\n",
+    "class LabMouse(Mouse):\n",
+    "    pass\n",
+    "\n",
+    "print(issubclass(Mouse, LabMouse), issubclass(LabMouse, Mouse))  # Prints \"False True\"."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. The `isinstance(Object, Class)` function checks if an object is an instance of a specified class. For example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Mouse:\n",
+    "    pass\n",
+    "\n",
+    "class LabMouse(Mouse):\n",
+    "    pass\n",
+    "\n",
+    "mickey = Mouse()\n",
+    "print(isinstance(mickey, Mouse), isinstance(mickey, LabMouse))  # Prints \"True False\"."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4. The `is` operator checks if two variables reference the same object. For example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Mouse:\n",
+    "        pass\n",
+    "\n",
+    "mickey = Mouse()\n",
+    "minnie = Mouse()\n",
+    "cloned_mickey = mickey\n",
+    "print(mickey is minnie, mickey is cloned_mickey)  # Prints \"False True\"."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "5. The `super()` function returns a reference to the nearest superclass of the class. For example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Mouse:\n",
+    "    def __str__(self):\n",
+    "        return \"Mouse\"\n",
+    "\n",
+    "class LabMouse(Mouse):\n",
+    "    def __str__(self):\n",
+    "        return \"Laboratory \" + super().__str__()\n",
+    "\n",
+    "doctor_mouse = LabMouse()\n",
+    "print(doctor_mouse)  # Prints \"Laboratory Mouse\"."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "6. Methods, instance variables, and class variables defined in a superclass are automatically inherited by their subclasses. For example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Mouse:\n",
+    "    Population = 0\n",
+    "\n",
+    "    def __init__(self, name):\n",
+    "        Mouse.Population += 1\n",
+    "        self.name = name\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return \"Hi, my name is \" + self.name\n",
+    "\n",
+    "class LabMouse(Mouse):\n",
+    "    pass\n",
+    "\n",
+    "professor_mouse = LabMouse(\"Professor Mouser\")\n",
+    "print(professor_mouse, Mouse.Population)  # Prints \"Hi, my name is Professor Mouser 1\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "7. To find any object/class property, Python looks in the following order:\n",
+    "    - Inside the object itself.\n",
+    "    - In all classes involved in the object's inheritance line from bottom to top.\n",
+    "    - If there is more than one class on a particular inheritance path, Python scans them from left to right.\n",
+    "    - If none of the above find the property, an `AttributeError` exception is raised.\n",
+    "    \n",
+    "8. If a subclass defines a method or variable with the same name as in the superclass, the subclass's name overrides the superclass's. For example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Mouse:\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return \"My name is \" + self.name\n",
+    "\n",
+    "class AncientMouse(Mouse):\n",
+    "    def __str__(self):\n",
+    "        return \"Meum nomen est \" + self.name\n",
+    "\n",
+    "mus = AncientMouse(\"Caesar\")\n",
+    "print(mus)  # Prints \"Meum nomen est Caesar\"."
+   ]
   }
  ],
  "metadata": {
