--- a/004 Object Oriented Programming/003 OOP Properties.ipynb
+++ b/004 Object Oriented Programming/003 OOP Properties.ipynb
@@ -341,8 +341,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'__module__': '__main__', 'varia': 1, '__init__': <function ExampleClass.__init__ at 0x000001929BE26D40>, '__dict__': <attribute '__dict__' of 'ExampleClass' objects>, '__weakref__': <attribute '__weakref__' of 'ExampleClass' objects>, '__doc__': None}\n",
-      "{'__module__': '__main__', 'varia': 2, '__init__': <function ExampleClass.__init__ at 0x000001929BE26D40>, '__dict__': <attribute '__dict__' of 'ExampleClass' objects>, '__weakref__': <attribute '__weakref__' of 'ExampleClass' objects>, '__doc__': None}\n",
+      "{'__module__': '__main__', 'varia': 1, '__init__': <function ExampleClass.__init__ at 0x0000017B7C036F20>, '__dict__': <attribute '__dict__' of 'ExampleClass' objects>, '__weakref__': <attribute '__weakref__' of 'ExampleClass' objects>, '__doc__': None}\n",
+      "{'__module__': '__main__', 'varia': 2, '__init__': <function ExampleClass.__init__ at 0x0000017B7C036F20>, '__dict__': <attribute '__dict__' of 'ExampleClass' objects>, '__weakref__': <attribute '__weakref__' of 'ExampleClass' objects>, '__doc__': None}\n",
       "{}\n"
      ]
     }
@@ -392,9 +392,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'__module__': '__main__', 'varia': 1, '__init__': <function ExampleClass.__init__ at 0x000001929BE25E40>, '__dict__': <attribute '__dict__' of 'ExampleClass' objects>, '__weakref__': <attribute '__weakref__' of 'ExampleClass' objects>, '__doc__': None}\n",
+      "{'__module__': '__main__', 'varia': 1, '__init__': <function ExampleClass.__init__ at 0x0000017B7C036DE0>, '__dict__': <attribute '__dict__' of 'ExampleClass' objects>, '__weakref__': <attribute '__weakref__' of 'ExampleClass' objects>, '__doc__': None}\n",
       "\n",
-      "{'__module__': '__main__', 'varia': 1, '__init__': <function ExampleClass.__init__ at 0x000001929BE25E40>, '__dict__': <attribute '__dict__' of 'ExampleClass' objects>, '__weakref__': <attribute '__weakref__' of 'ExampleClass' objects>, '__doc__': None}\n",
+      "{'__module__': '__main__', 'varia': 1, '__init__': <function ExampleClass.__init__ at 0x0000017B7C036DE0>, '__dict__': <attribute '__dict__' of 'ExampleClass' objects>, '__weakref__': <attribute '__weakref__' of 'ExampleClass' objects>, '__doc__': None}\n",
       "\n",
       "{'varia': 2}\n"
      ]
@@ -508,10 +508,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "4aefb4f5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "'ExampleClass' object has no attribute 'b'\n"
+     ]
+    }
+   ],
    "source": [
     "class ExampleClass:\n",
     "    def __init__(self, val):\n",
@@ -550,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "1b114f3b",
    "metadata": {},
    "outputs": [
@@ -603,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "2d29a019",
    "metadata": {},
    "outputs": [
@@ -644,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "83c90205",
    "metadata": {},
    "outputs": [
@@ -707,12 +716,6 @@
     "{'alpha': 1, '_Sample__delta': 3, 'beta': 2}\n",
     "```"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "613c87b7",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
