--- a/004 Object Oriented Programming/004 Methods.ipynb
+++ b/004 Object Oriented Programming/004 Methods.ipynb
@@ -24,10 +24,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "260edb6c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "method: 1\n",
+      "method: 2\n",
+      "method: 3\n"
+     ]
+    }
+   ],
    "source": [
     "class Classy:\n",
     "    def method(self, par):\n",
@@ -73,10 +83,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "2c3bc115",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 3\n"
+     ]
+    }
+   ],
    "source": [
     "class Classy:\n",
     "    varia = 2\n",
@@ -100,10 +118,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "add26854",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "method\n",
+      "other\n"
+     ]
+    }
+   ],
    "source": [
     "class Classy:\n",
     "    def other(self):\n",
@@ -139,10 +166,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "8bf98825",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "object\n"
+     ]
+    }
+   ],
    "source": [
     "class Classy:\n",
     "    def __init__(self, value):\n",
@@ -177,10 +212,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "067d16cb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "object\n",
+      "None\n"
+     ]
+    }
+   ],
    "source": [
     "class Classy:\n",
     "    def __init__(self, value=None):\n",
@@ -205,10 +249,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "83448e38",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "visible\n",
+      "failed\n",
+      "hidden\n"
+     ]
+    }
+   ],
    "source": [
     "class Classy:\n",
     "    def visible(self):\n",
@@ -267,10 +321,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "317e6c34",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Classy\n",
+      "Classy\n"
+     ]
+    }
+   ],
    "source": [
     "class Classy:\n",
     "    pass\n",
@@ -290,10 +353,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "5032c7bb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Classy' object has no attribute '__name__'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[8], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(obj\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__name__\u001b[39m)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'Classy' object has no attribute '__name__'"
+     ]
+    }
+   ],
    "source": [
     "print(obj.__name__)"
    ]
@@ -357,10 +432,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "6ecad2a6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "( object )\n",
+      "( object )\n",
+      "( SuperOne SuperTwo )\n"
+     ]
+    }
+   ],
    "source": [
     "class SuperOne:\n",
     "    pass\n",
@@ -421,10 +506,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "4e48e078",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'a': 1, 'b': 2, 'i': 3, 'ireal': 3.5, 'integer': 4, 'z': 5}\n",
+      "{'a': 1, 'b': 2, 'i': 4, 'ireal': 3.5, 'integer': 5, 'z': 5}\n"
+     ]
+    }
+   ],
    "source": [
     "class MyClass:\n",
     "    pass\n",
@@ -498,10 +592,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "287c930d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My name is Sample living in __main__\n"
+     ]
+    }
+   ],
    "source": [
     "class Sample:\n",
     "    def __init__(self):\n",
